fdo#84051 fix distribute on multiple sheets of paper

Change-Id: I6b14b6360a1292bd715708382032f7a5eed30be5